maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:4: error: not found: value random3
    x=random3()
      ^